fix: issue #36
- Reduce width of day name
- Truncate day name

--- a/content/themes/local-whistler/app/styles/_sidebars.scss
+++ b/content/themes/local-whistler/app/styles/_sidebars.scss
@@ -106,13 +106,17 @@
 
 .business__hours__day,
 .business__hours__time {
-  width: 50%;
   display: block;
   float: left;
 }
 
+.business__hours__day {
+  width: 30%;
+}
+
 .business__hours__time {
   text-align: right;
+  width: 70%;
 }
 
 .footer .widget {
